@@ -1,12 +1,17 @@
 package com.grupo1.pidh.service.impl;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.grupo1.pidh.dto.entrada.ImagenEntradaDto;
+import com.grupo1.pidh.dto.entrada.ProductoImagenEntradaDto;
 import com.grupo1.pidh.dto.entrada.ProductoEntradaDto;
 import com.grupo1.pidh.dto.salida.ProductoSalidaDto;
-import com.grupo1.pidh.entity.Imagen;
+import com.grupo1.pidh.entity.Caracteristica;
+import com.grupo1.pidh.entity.Categoria;
+import com.grupo1.pidh.entity.ProductoImagen;
 import com.grupo1.pidh.entity.Producto;
+import com.grupo1.pidh.exceptions.BadRequestException;
 import com.grupo1.pidh.exceptions.ResourceNotFoundException;
+import com.grupo1.pidh.repository.CaracteristicaRepository;
+import com.grupo1.pidh.repository.CategoriaRepository;
 import com.grupo1.pidh.repository.ProductoRepository;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
@@ -16,17 +21,14 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
-import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.awt.*;
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
+
 import com.grupo1.pidh.service.IS3Service;
 
 import static com.grupo1.pidh.utils.enums.TipoEvento.FECHA_UNICA;
@@ -39,8 +41,10 @@ import static org.mockito.Mockito.*;
 @TestPropertySource(locations = "classpath:application-local.properties")
 class ProductoServiceTest {
     private final ProductoRepository productoRepositoryMock = mock(ProductoRepository.class);
+    private final CategoriaRepository categoriaRepositoryMock = mock(CategoriaRepository.class);
     private final ModelMapper modelMapper = new ModelMapper();
     private final IS3Service s3ServiceMock = mock(IS3Service.class);
+    private final CaracteristicaRepository caracteristicaRepositoryMock = mock(CaracteristicaRepository.class);
 
     @Autowired //inyecto el ObjectMapper configurado en JacksonConfig
     private ObjectMapper objectMapper;
@@ -50,40 +54,71 @@ class ProductoServiceTest {
     private static LocalTime horaInicio = LocalTime.of(18, 30, 0);
     private static LocalTime horaFin = LocalTime.of(21, 30, 0);
     private static LocalDate diaEvento = LocalDate.of(2025, 6, 21);
-    private static List<Imagen> imagenes;
-    private static List<ImagenEntradaDto> imagenEntradaDtos;
+    private static List<ProductoImagen> productoImagenes;
+    private static List<ProductoImagenEntradaDto> productoImagenEntradaDtos;
     private static List<MultipartFile> multipartFiles;
+    private static Set<Long> categoriasIds;
+    private static Set<Categoria> categorias;
+    private static Set<Long> caracteristicasIds;
+    private static Set<Caracteristica> caracteristicas;
 
     @BeforeAll
     static void setUp(){
-        producto = new Producto(1L, "Observacion de cielo nocturno", "Una noche para disfrutar", 500.00, POR_PERSONA, "Español", horaInicio, horaFin, FECHA_UNICA, diaEvento, Collections.emptyList(), Collections.emptySet(), Collections.emptyList());
-        imagenes = List.of(
-                new Imagen(1L, "https://imagenespasocenturion.s3.us-east-1.amazonaws.com/DSCN1434.JPG", producto),
-                new Imagen(2L, "https://imagenespasocenturion.s3.us-east-1.amazonaws.com/DSCN0710.JPG", producto)
+        producto = new Producto(1L, "Observacion de cielo nocturno", "Una noche para disfrutar", 500.00, POR_PERSONA, "Español", horaInicio, horaFin, FECHA_UNICA, diaEvento, Collections.emptyList(), new HashSet<>(), new HashSet<>(), Collections.emptyList());
+        productoImagenes = List.of(
+                new ProductoImagen(1L, "https://imagenespasocenturion.s3.us-east-1.amazonaws.com/DSCN1434.JPG", producto),
+                new ProductoImagen(2L, "https://imagenespasocenturion.s3.us-east-1.amazonaws.com/DSCN0710.JPG", producto),
+                new ProductoImagen(3L, "https://imagenespasocenturion.s3.us-east-1.amazonaws.com/DSCN0711.JPG", producto),
+                new ProductoImagen(4L, "https://imagenespasocenturion.s3.us-east-1.amazonaws.com/DSCN0712.JPG", producto),
+                new ProductoImagen(5L, "https://imagenespasocenturion.s3.us-east-1.amazonaws.com/DSCN0713.JPG", producto)
         );
         multipartFiles = List.of(
                 mock(MultipartFile.class),
+                mock(MultipartFile.class),
+                mock(MultipartFile.class),
+                mock(MultipartFile.class),
                 mock(MultipartFile.class)
         );
-        imagenEntradaDtos = List.of(
-                new ImagenEntradaDto("https://imagenespasocenturion.s3.us-east-1.amazonaws.com/DSCN1434.JPG"),
-                new ImagenEntradaDto("https://imagenespasocenturion.s3.us-east-1.amazonaws.com/DSCN0710.JPG"));
 
-        producto.setImagenes(imagenes);
-        productoEntradaDto = new ProductoEntradaDto("Observacion de cielo nocturno", "Una noche para disfrutar", 500.00, POR_PERSONA, "Español", horaInicio, horaFin, FECHA_UNICA, Collections.emptyList(), diaEvento, Collections.emptySet(), imagenEntradaDtos );
+        categoriasIds = new HashSet<>(Arrays.asList(1L,2L));
+
+        categorias = new HashSet<>(Arrays.asList(
+                new Categoria(1L, "Astroturismo", "Experiencia nocturna", null),
+                new Categoria(2L, "Naturaleza", "Observación de flora y fauna", null)
+        ));
+
+        caracteristicasIds = new HashSet<>(Arrays.asList(1L, 3L));
+        caracteristicas = new HashSet<>(Arrays.asList(
+                new Caracteristica(1L, "Binoculares", "icono1.png"),
+                new Caracteristica(3L, "Guia especializado", "icono3.png")
+        ));
+
+
+        productoEntradaDto = new ProductoEntradaDto("Observacion de cielo nocturno", "Una noche para disfrutar", 500.00, POR_PERSONA, "Español", horaInicio, horaFin, FECHA_UNICA, Collections.emptyList(), diaEvento, categoriasIds, caracteristicasIds, productoImagenEntradaDtos);
     }
 
     @BeforeEach
     void initService(){
-        productoService = new ProductoService(productoRepositoryMock, objectMapper, modelMapper, s3ServiceMock);
+        productoService = new ProductoService(productoRepositoryMock, objectMapper, s3ServiceMock, modelMapper, categoriaRepositoryMock, caracteristicaRepositoryMock);
         when(s3ServiceMock.uploadFile(any(MultipartFile.class)))
                 .thenReturn("https://imagenespasocenturion.s3.us-east-1.amazonaws.com/DSCN1434.JPG")
-                .thenReturn("https://imagenespasocenturion.s3.us-east-1.amazonaws.com/DSCN0710.JPG");
+                .thenReturn("https://imagenespasocenturion.s3.us-east-1.amazonaws.com/DSCN0710.JPG")
+                .thenReturn("https://imagenespasocenturion.s3.us-east-1.amazonaws.com/DSCN0711.JPG")
+                .thenReturn("https://imagenespasocenturion.s3.us-east-1.amazonaws.com/DSCN0712.JPG")
+                .thenReturn("https://imagenespasocenturion.s3.us-east-1.amazonaws.com/DSCN0713.JPG");
+        when(categoriaRepositoryMock.findById(anyLong()))
+                .thenAnswer(invocation -> categorias.stream()
+                        .filter(c -> c.getId().equals(invocation.getArgument(0)))
+                        .findFirst());
+        when(caracteristicaRepositoryMock.findById(anyLong()))
+                .thenAnswer(invocation -> caracteristicas.stream()
+                        .filter(c -> c.getId().equals(invocation.getArgument(0)))
+                        .findFirst());
     }
 
 
     @Test
-    void deberiaMandarAlRepositoryUnProductoDeNombreObservacionDeCieloNocturno_yRetornarUnaSalidaDtoConSuId(){
+    void deberiaMandarAlRepositoryUnProductoDeNombreObservacionDeCieloNocturno_yRetornarUnaSalidaDtoConSuId() throws BadRequestException {
         when(productoRepositoryMock.save(any(Producto.class))).thenReturn(producto);
         ProductoSalidaDto productoSalidaDto = productoService.registrarProducto(productoEntradaDto,multipartFiles);
 
@@ -91,7 +126,8 @@ class ProductoServiceTest {
         assertNotNull(productoSalidaDto.getId());
         assertEquals("Observacion de cielo nocturno", productoSalidaDto.getNombre());
         verify(productoRepositoryMock, times(2)).save(any(Producto.class));
-        verify(s3ServiceMock, times(2)).uploadFile(any(MultipartFile.class));
+        verify(s3ServiceMock, times(5)).uploadFile(any(MultipartFile.class));
+        //verify(categoriaRepositoryMock, times(2)).findById(anyLong());
 
     }
 
